--- a/intro/Exponential_smoothing-streamlit.ipynb
+++ b/intro/Exponential_smoothing-streamlit.ipynb
@@ -530,7 +530,7 @@
    "metadata": {},
    "source": [
     " Conclusion\n",
-    " Le choix de la méthode appropriée dépend de vos données spécifiques et de vos objectifs de prévision. Prenez donc le temps d'explorer et d'expérimenter ces méthodes pour faire des prédictions éclairées dans votre domaine."
+    " Le choix de la méthode appropriée dépend de vos données spécifiques et de vos objectifs de prévision."
    ]
   }
  ],
